# video-summary-mcp-server

./: .gitignore  README.md  encoder.py  frame_extractor.py  image_analysis.py  main.py  prompt.py  pyproject.toml  server.py  summarizer.py  video_analysis.py
examples/: summarize_video.py
images/: .gitkeep
videos/: .gitkeep
